Add Jest configuration and initial test setup for components
- Created jest.config.ts to configure Jest with TypeScript and jsdom environment.
- Added jest.setup.ts for extending Jest matchers with @testing-library/jest-dom.
- Updated package.json and package-lock.json to include necessary testing libraries: @testing-library/react, @testing-library/jest-dom, jest, ts-jest, and their types.
- Introduced initial test files for Dialog, LotteryPage, and PrizeList components, ensuring proper rendering and functionality checks.

This update establishes a robust testing framework for the project, enhancing code reliability and facilitating future development.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,10 @@
   "compilerOptions": {
     "target": "ESNext",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "types": ["@testing-library/jest-dom"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "esModuleInterop": true,
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
