--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc && vite build",
     "electron:dev": "cross-env NODE_ENV=development concurrently \"npm run start\" \"wait-on tcp:5173 && electron .\"",
     "electron:build": "npm run build && electron-builder",
-    "test": "jest"
+    "test": "jest --passWithNoTests",
+    "test:coverage": "jest --coverage --passWithNoTests"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
@@ -21,12 +22,20 @@
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@types/jest": "^29.5.12",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.20",
     "concurrently": "^8.0.1",
     "cross-env": "^7.0.3",
     "electron": "^24.1.2",
     "electron-builder": "^24.3.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "identity-obj-proxy": "^3.0.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.0.2",
