--- a/package.json
+++ b/package.json
@@ -41,5 +41,26 @@
     "typescript": "^5.0.2",
     "vite": "^4.3.0",
     "wait-on": "^8.0.2"
+  },
+  "build": {
+    "appId": "com.lottery.app",
+    "productName": "抽奖系统",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "dist/**/*",
+      "electron/**/*"
+    ],
+    "win": {
+      "target": [
+        "nsis"
+      ]
+    },
+    "nsis": {
+      "oneClick": true,
+      "perMachine": false,
+      "allowToChangeInstallationDirectory": false
+    }
   }
 }
